quick fix on #visitors overflow

--- a/resources/css/screen.css
+++ b/resources/css/screen.css
@@ -399,6 +399,7 @@ div.section {
   box-sizing: content-box;
   padding-left: 15px;
   background: transparent url(../images/visitors.png) top center no-repeat;
+  overflow: hidden;
 }
 @media only screen and (max-width: 480px) {
   /* line 207, ../../../scratch/sass/screen.scss */
